--- a/nodejs/codingTrain/module2/05_querying_database/index.html
+++ b/nodejs/codingTrain/module2/05_querying_database/index.html
@@ -27,21 +27,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>query DB</title>
   </head>
   <body>
-    <h1>Data Selfie App</h1>
+    <h1>Data Selfie App query DB</h1>
     <p>
       latitude: <span id="latitude"></span>&deg;<br />
       longitude: <span id="longitude"></span>&deg;
     </p>
+    <input id="mood" value="rainbow" />
 
     <button id="submit">submit</button>
     <script>
       let lat, lon;
       const button = document.getElementById("submit");
       button.addEventListener("click", async (event) => {
-        const data = { lat, lon };
+        const mood = document.getElementById("mood").value;
+        const data = { lat, lon, mood };
         const options = {
           method: "POST",
           headers: {
@@ -49,7 +51,7 @@
           },
           body: JSON.stringify(data),
         };
-        const response = await fetch("/api_test", options);
+        const response = await fetch("/api", options);
         const json = await response.json();
         console.log(json);
       });
@@ -68,3 +70,4 @@
     </script>
   </body>
 </html>
+ 
