--- a/nodejs/codingTrain/module2/05_querying_database/all.html
+++ b/nodejs/codingTrain/module2/05_querying_database/all.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
-  // This is the client code   
+  // This is the client code.   To run use: localhost:3000/all.html
+
   //https://www.youtube.com/watch?v=q-lUgFxwjEM&list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&index=13	 
  // https://github.com/CodingTrain/Intro-to-Data-APIs-JS/blob/source/module2/05_querying_database/public/index.html
 
