--- a/nodejs/codingTrain/module2/05_querying_database/index.html
+++ b/nodejs/codingTrain/module2/05_querying_database/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <!--
-  // This is the client code   
-	2.2 Geolocation Web API - Working with Data and APIs in JavaScript
-	https://www.youtube.com/watch?v=3ls013DBcww&list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&index=10
-  
-	Using the Geolocation API
-   https://developer.mozilla.org/en-US/docs/Web/API/Geolocation_API/Using_the_Geolocation_API 
-   
-
-   2.3 HTTP Post Request with fetch()  
-   https://www.youtube.com/watch?v=Kw5tC5nQMRY
-   05:30
-
-   https://github.com/CodingTrain/Intro-to-Data-APIs-JS/blob/source/module2/03_post_request/public/index.html
-
+  2.5 Database Query  
+  This is the client    side
+	https://www.youtube.com/watch?v=xVYa20DCUv0&list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&index=13
+	 
+ 
+https://github.com/CodingTrain/Intro-to-Data-APIs-JS/tree/source/module2/05_querying_database
 
    https://expressjs.com/
    https://expressjs.com/en/guide/routing.html
 
-
+  https://github.com/louischatriot/nedb
+  https://github.com/louischatriot/nedb#basic-querying
 
 -->
 <!DOCTYPE html>
