--- a/nodejs/codingTrain/module2/06_webcam/index.html
+++ b/nodejs/codingTrain/module2/06_webcam/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!--
    
- // 2.6 Saving Images and Base64 Encoding 
- // This is the SERVER    side
-// npm instal  nedb
- //https://www.youtube.com/watch?v=9Rhsb3GU2Iw&list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&index=14
+ 2.6 Saving Images and Base64 Encoding 
+ 2.7 Project Wrap-up: Accessibility and Design  
+ // This is the Client    side
+2:59
+ https://www.youtube.com/watch?v=1mnpn6q25FI&list=PLRqwX-V7Uu6YxDKpFzf_2D84p0cyk4T7X&index=16
  //To start  run:    'nodemon webCamDB.js '
 // https://github.com/CodingTrain/Intro-to-Data-APIs-JS/tree/source/module2/06_webcam
 
@@ -24,10 +25,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <h1>Data Selfie App</h1>
-    <div><a href="/">enter</a> | <a href="/all.html">list</a></div>
+    <div><a href="/">enter</a> | <a href="/logs/index.html">list</a></div>
 
     <p>
       latitude: <span id="latitude"></span>&deg;<br />
