--- a/Self-Driving Car/1. Car driving mechanics/index.html
+++ b/Self-Driving Car/1. Car driving mechanics/index.html
@@ -11,6 +11,7 @@ https://github.com/gniziemazity/Self-driving-car/tree/main/1.%20Car%20driving%20
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
+    <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
